@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2014,v 1.3070 2014/08/14 18:29:53 cheusov Exp $
+$NetBSD: CHANGES-2014,v 1.3071 2014/08/14 19:36:04 shattered Exp $
 
 Changes to the packages collection and infrastructure in 2014:
 
@@ -4008,3 +4008,4 @@ Changes to the packages collection and infrastructure in 2014:
 	Updated databases/elasticsearch to 1.3.2 [imil 2014-08-14]
 	Updated databases/py-elasticsearch to 1.2.0 [imil 2014-08-14]
 	Updated pkgtools/distbb to 0.47.0 [cheusov 2014-08-14]
+	Updated graphics/pstoedit to 3.62 [shattered 2014-08-14]
